--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
 <!DOCTYPE html>
 
-<h1>메인페이지 입니다</h1>
+<head>
+    <h1>메인 페이지</h1>
+</head>
+<body>
+    <ul>
+        <li>
+            <a href = "koreanAnthem.html">애국가</a>
+        </li>
+        <li>
+            <a href = "goToFrontLine.html">전선을간다</a>
+        </li>
+        <li>
+            <a href = "GreenTree.html">푸른소나무</a>
+        </li>
+        <li>
+            <a href = "Friend.html">전우</a>
+        </li>
+    </ul>
+</body>
