--- a/Friend.html
+++ b/Friend.html
@@ -42,6 +42,7 @@
         <p>당신의 이름, 당신의 영광은 영원히 남아있습니다.</p>
         <p>당신이 걸어온 길, 우리가 따르리라 약속합니다.</p>
         <p>우리는 당신을 기억합니다.</p>
+        <a href="index.html">index.html로 이동</a>
     </div>
 </body>
 </html>
